feat(app): implement page permissions
