# front/src/api/model/index.ts
@@ -5,8 +5,9 @@
  * OpenAPI spec version: 0.0.0
  */
 
-export * from "./accessTokenWithMe";
+export * from "./accessTokenWithMeAndPagePermissions";
 export * from "./currentPage";
 export * from "./googleLoginURL";
 export * from "./me";
+export * from "./pagePermissions";
 export * from "./uuid";
